fix cases where the left column becomes too large
On the blogs page, long lines under a <pre> tag will make the left column
overlap the sidebar.  Fix it in the CSS.

--- a/assets/css/skel-noscript.css
+++ b/assets/css/skel-noscript.css
@@ -27,6 +27,7 @@
 			-o-box-sizing: border-box;
 			-ms-box-sizing: border-box;
 			box-sizing: border-box;
+			max-width: 100%;
 		}
 
 	/* Rows */
